--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
