--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "firebase": "^8.8.0",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
