--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "@material-tailwind/react": "0.3.4",
     "@tailwindcss/line-clamp": "^0.2.1",
     "firebase": "^8.8.0",
     "next": "10.2.3",
