--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
     "@heroicons/react": "^1.0.1",
     "@material-tailwind/react": "0.3.4",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "draft-js": "^0.11.7",
     "firebase": "^8.8.0",
+    "html-to-image": "^1.7.0",
+    "html2canvas": "^1.2.2",
+    "immutable": "*",
+    "material-icons": "^0.6.4",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
